# programming_summarization_project

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
data/input/: test.txt
src/textsummarizer/: __init__.py  __main__.py  cli.py  core.py  entities.py  statistics.py
src/textsummarizer/methods/: __init__.py  base.py  feature_based.py  frequency_based.py
src/textsummarizer/utils/: __init__.py  file_io.py  text_processing.py  vizualization.py
tests/: conftest.py  test_core.py  test_features.py  test_integration.py  test_statistics.py
