[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm"]
build-backend = "setuptools.build_meta"

[project]
name = "textsummarizer"
dynamic = ["version"]
description = "Tool for extractive text summarization with statistical analysis"
authors = [
    {name = "Your Name", email = "your.email@example.com"},
]
dependencies = [
    "nltk>=3.8",
    "pymorphy2>=2.0",
    "pymorphy2-dicts-ru>=2.4",
    "scikit-learn>=1.3",
    "matplotlib>=3.7",
    "pandas>=2.0",
    "click>=8.1",  # для CLI
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "black>=23.0",
    "flake8>=6.0",
    "mypy>=1.0",
]

[project.scripts]
textsummarizer = "textsummarizer.cli:main"

[tool.setuptools_scm]

[tool.black]
line-length = 88
target-version = ['py38']

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true