[project]
name = "textsummarizer"
description = "Tool for extractive text summarization with statistical analysis"
requires-python = ">=3.8"
dependencies = [
    "nltk>=3.8",
    "pymorphy2>=2.0",
    "pymorphy2-dicts-ru>=2.4",
    "scikit-learn>=1.3",
    "matplotlib>=3.7",
    "pandas>=2.0",
    "click>=8.1",
    "numpy>=1.21",
]

[tool.black]
line-length = 88
target-version = ['py38']

[tool.flake8]
max-line-length = 88
extend-ignore = "E203, W503, E501"
exclude = [".git", "__pycache__", "build", "dist", "*.egg-info"]
per-file-ignores = ["__init__.py:F401"]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
strict_optional = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = [
    "--verbose",
    "--cov=src",
    "--cov-report=term-missing",
    "--cov-report=html"
]
