# Нужно выбрать что-то одно: либо requirements.txt, либо pyproject.toml

[project]
# Раз вы не собираете пакет, вам нужно явно указать это в pyproject.toml. Иначе в зависимоти добавляется пакет `textsummarizer`
name = "textsummarizer"  # Предпочтительнее `text_summarizer` - через нижнее подчеркивание
# Не указана версия - `version`
version = "1.0.0"
description = "Tool for extractive text summarization with statistical analysis"
requires-python = ">=3.8"  # Все версии нужно строго фиксировать. Пример: `"==3.8.*"`.
# Почему такая старая версия Python? Она уже несколько лет не поддерживается :(
dependencies = [
    "nltk>=3.8",  # Не используется
    "pymorphy2==0.9.1",  # Такой версии не существует. Последняя - 0.9.1  # Не используется
    "pymorphy2-dicts-ru>=2.4",  # Не используется
    "scikit-learn>=1.3",  # Не используется
    "matplotlib>=3.7",
    "pandas>=2.0",  # Не используется
    "click>=8.1",
    "numpy>=1.21",
]

# Не указаны dev-зависимости. Я проверяю по `pyproject.toml` (раз уж вы его добавили), поскольку это более современный подход.
# И в `requirements-dev.txt` я не смотрю. Если я буду устанавливать зависимости из `pyproject.toml`, то никакие dev-инструменты работать у меня не будут.

[tool.black]
line-length = 88
target-version = ['py38']

[tool.flake8]
max-line-length = 88
extend-ignore = "E203, W503, E501"  # Почему только эти правила?
exclude = [".git", "__pycache__", "build", "dist", "*.egg-info"]  # `__pycache__` и `*.egg-info` вообще не должен быть в проекте
per-file-ignores = ["__init__.py:F401"]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
strict_optional = true

[tool.pytest.ini_options]
# Сюда следовало еще добавить путь к основному модулю - `pythonpath = ['src']` (обязательно при src-layout)
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = [
    "--verbose",
    "--cov=src",
    "--cov-report=term-missing",
    "--cov-report=html"
]
